--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
   min-width: 100%;
   min-height: 100%;
-  font-family: "Roboto", sans-serif;
   background-color: #fff3e0;
 }
 
@@ -54,7 +53,7 @@ p {
   flex-direction: column;
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.16);
-  border-radius: 5%;
+  border-radius: 1%;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
@@ -63,7 +62,7 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 30vh;
+  height: 40vh;
   margin-bottom: 24px;
 }
 
@@ -132,6 +131,7 @@ p {
 .work-group p,
 .education-group p {
   font-style: italic;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 768px) {
