--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
 .container {
   background-color: #fafafa;
   width: 90%;
-  margin: 50px auto;
+  margin: 32px auto;
   padding: 48px 0;
   display: flex;
   flex-direction: column;
@@ -64,6 +64,10 @@ p {
   justify-content: center;
   height: 40vh;
   margin-bottom: 24px;
+}
+
+.header p {
+  margin-bottom: 8px;
 }
 
 .picture {
