--- a/style_print.css
+++ b/style_print.css
@@ -34,7 +34,6 @@ h4 {
 a {
   color: #000000;
   text-decoration: none;
-  display: block;
 }
 
 a:visited {
@@ -46,7 +45,7 @@ p {
 }
 
 .container {
-  width: 90%;
+  width: 100%;
   margin: 32px auto;
   /* padding: 48px 0; */
   display: flex;
@@ -55,13 +54,10 @@ p {
 }
 
 .header {
-  width: 96%;
+  width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  margin-bottom: 24px;
-  flex-direction: column;
-  align-items: center;
-  height: fit-content;
 }
 
 .header p {
@@ -76,29 +72,27 @@ p {
   display: block;
   margin: 0 auto;
   height: 250px;
-  max-width: 100%;
-  max-height: 100%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .namecard {
-  width: 100%;
+  width: 60%;
 }
 
 .content {
   width: 96%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 
 .col1 {
-  width: 100%;
+  width: 30%;
 }
 
 .col2 {
-  width: 100%;
-  padding-left: 0;
+  width: 70%;
+  padding-left: 50px;
 }
 
 .skill-group {
@@ -133,5 +127,35 @@ p {
 .work-group p,
 .education-group p {
   font-style: italic;
-  margin-bottom: 0px;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    border-radius: 2%;
+    padding: 48px 12px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+  }
+
+  .namecard {
+    width: 100%;
+  }
+
+  .content {
+    flex-direction: column;
+  }
+
+  .col1 {
+    width: 100%;
+  }
+
+  .col2 {
+    width: 100%;
+    padding-left: 0;
+  }
 }
